test/netlist/error/any-used-var.bop
A(a) = c
where
  _ = Not(a);
  c = Id(_);
end where;
